to fix handler.js

--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
+@import url('./node_modules/animate.css/animate.min.css');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --animate-delay: 0.5s;
+  }
+
+  
